force-app/main/default/objects/ssot__GeneratedOperationPlanStepExecution__dlm/fields/ssot__GeneratedOperationPlanExecutionId__c.field-meta.xml
<CustomField>
    <fullName>ssot__GeneratedOperationPlanExecutionId__c</fullName>
    <label>Generated Operation Plan Execution</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GeneratedOperationPlanExecutionId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>