force-app/main/default/objects/ssot__GeneratedOperationPlanStepExecution__dlm/fields/ssot__GeneratedOperationPlanStepId__c.field-meta.xml
<CustomField>
    <fullName>ssot__GeneratedOperationPlanStepId__c</fullName>
    <label>Generated Operation Plan Step</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GeneratedOperationPlanStepId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>