force-app/main/default/objects/ssot__GeneratedOperationPlanStepExecution__dlm/fields/ssot__GeneratedOpPlanStepExecutionStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__GeneratedOpPlanStepExecutionStatus__c</fullName>
    <label>Generated Op Plan Step Execution Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GeneratedOpPlanStepExecutionStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>