force-app/main/default/objects/ssot__GeneratedOperationPlanStepExecution__dlm/fields/ssot__rel_1723128377274_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1723128377274_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GeneratedOperationPlanStepExecution__rel</label>
    <referenceTo>ssot__GeneratedOperationPlanStep__dlm</referenceTo>
    <relationshipLabel>GeneratedOperationPlanStepExecution__rel</relationshipLabel>
    <relationshipName>rel_1723128377274_end</relationshipName>
    <type>Lookup</type>
</CustomField>